--- a/AngularMvcProject/App/View/dashboard/dashboard.html
+++ b/AngularMvcProject/App/View/dashboard/dashboard.html
@@ -185,7 +185,7 @@
                         <div class="dashboardAppt">
                             <div class="dashboardApptHeader">
                                 <h3>This Week's Schedule</h3>
-                                <button class="btn btn-default bookBtn" type="">Book Appointment...</button>
+                                <!--<button class="btn btn-default bookBtn" type="">Book Appointment...</button>-->
                                 <div class="clearfix"></div>
                             </div>
                             <div class="apptDisplay">
