--- a/AngularMvcProject/App/View/Customer/customer.html
+++ b/AngularMvcProject/App/View/Customer/customer.html
@@ -526,20 +526,25 @@
                                                                             </div>
                                                                             <div class="col-md-6">
                                                                                 <div class="dropdown labeldrowDownBtn nolableDrop">
-                                                                                    <button class="dropbtn">
+                                                                                    <!--<button class="dropbtn">
                                                                                         No Label
                                                                                         <span class="glyphicon glyphicon-chevron-down"></span>
-                                                                                    </button>
-                                                                                    <ul class="lableDropdownContent dropdown-content">
-                                                                                        <li><a href="#">No Label</a></li>
+                                                                                    </button>-->
+                                                                                    
+                                                                                        <!--<li><a href="#">No Label</a></li>
                                                                                         <li><a href="#">Pending</a></li>
                                                                                         <li><a href="#">Confirmed</a></li>
                                                                                         <li><a href="#">Done</a></li>
                                                                                         <li><a href="#">No-Show</a></li>
                                                                                         <li><a href="#">Paid</a></li>
                                                                                         <li><a href="#">Running Late</a></li>
-                                                                                        <li><a href="#">Custom Label</a></li>
-                                                                                    </ul>
+                                                                                        <li><a href="#">Custom Label</a></li>-->
+                                                                                      
+                                                                                            <select ng-model="item.Status" ng-init='item.Status="No Label"'>
+                                                                                                <option ng-repeat="item in StatusList" value="{{item.Status}}">{{item.Status}}</option>
+                                                                                            </select>
+                                                                                     
+                                                                                    
                                                                                 </div>
                                                                             </div>
                                                                         </div>
@@ -602,7 +607,7 @@
                                                                                     </div>
                                                                                 </div>
                                                                             </div>
-                                                                            <div class="form-group">
+                                                                            <div class="form-group" ng-if="ServicePriceTimeDetailIsVisible">
                                                                                 <label class="control-label col-sm-4"></label>
                                                                                 <div class="col-sm-8">
                                                                                     <div class="row">
@@ -646,7 +651,7 @@
                                                                                            ng-click="opened = !opened"
                                                                                            ng-readonly='true' />-->
                                                                                     <div class="selectDropdown">
-                                                                                        <select class="select_btn dateTimeSelect" ng-required="true" ng-model="timeoption" ng-init="timeoption='8:00 AM'">
+                                                                                        <select class="select_btn dateTimeSelect"  ng-model="timeoption" name="timeoption" ng-init="timeoption='8:00 AM'">
                                                                                             <option ng-repeat="timeoption in timeInfoFrom " value="{{timeoption}}">{{timeoption}}</option>
                                                                                         </select>
                                                                                     </div>
@@ -681,11 +686,11 @@
                                                                                     </div>
                                                                                 </div>
                                                                             </div>
-                                                                            <div class="form-group rescheduleDiv">
+                                                                            <!--<div class="form-group rescheduleDiv">
                                                                                 <div class="col-sm-12 sendSchdlEmail">
                                                                                     <input type="checkbox" class="sampleCheckbox checkbox-custom" name="" value="service"><label for="checkbox-1" class="checkbox-custom-label">Send Reschedule Email</label>
                                                                                 </div>
-                                                                            </div>
+                                                                            </div>-->
                                                                         </div>
 
                                                                     </div>
@@ -693,9 +698,9 @@
                                                                         <div class="btn-group apptSaveBtn" role="group">
                                                                             <button type="submit" class="btn btn-default" data-action="save" role="button">Save Appointment</button>
                                                                         </div>
-                                                                        <div class="apptViewFooter">
+                                                                        <!--<div class="apptViewFooter">
                                                                             <a href="#" class="apptDeleteBtn">Delete</a>
-                                                                        </div>
+                                                                        </div>-->
                                                                     </div>
                                                                 </form>
                                                             </div>
@@ -733,15 +738,18 @@
                                                                         No Label
                                                                         <span class="glyphicon glyphicon-chevron-down"></span>
                                                                     </button>
-                                                                    <ul class="lableDropdownContent dropdown-content">
-                                                                        <li><a href="">No Label</a></li>
+                                                                    <ul class="lableDropdownContent dropdown-content" ng-repeat="item in StatusList">
+                                                                        <!--<li><a href="">No Label</a></li>
                                                                         <li><a href="">Pending</a></li>
-                                                                        <li><a href="">Confirmed</a></li>
-                                                                        <li><a href="">Done</a></li>
+                                                                        <li><a href="">Confirmed</a></li>-->                                                                     
+                                                                        <!--<li><a href="">Done</a></li>
                                                                         <li><a href="">No-Show</a></li>
                                                                         <li><a href="">Paid</a></li>
                                                                         <li><a href="">Running Late</a></li>
-                                                                        <li><a href="">Custom Label</a></li>
+                                                                        <li><a href="">Custom Label</a></li>-->
+
+                                                                        <li><a href=""  ng-model="item.Value">{{item.Status}}</a></li>
+                                                                     
                                                                     </ul>
                                                                 </div>
 
