--- a/AngularMvcProject/App/View/Setting/Staff.html
+++ b/AngularMvcProject/App/View/Setting/Staff.html
@@ -1160,6 +1160,9 @@
                                                                                             <div class="btn-group saveChangesDiv" role="group">
                                                                                                 <button type="submit" class="btn saveChangesBtn btn-default" data-action="save" role="button">Save Changes</button>
                                                                                             </div>
+                                                                                            <button type="button" class="pull-right btn" style="background: none;color: #949494;" id="deletetimeoffbtn" ng-click="Deletetimeoff()">
+                                                                                                Delete                                                                                              
+                                                                                            </button>
                                                                                         </div>
                                                                                     </form>
                                                                                 </div>
